# group-simulator

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  costs.cpp  costs.hpp  events.def  judge_runs_system.cpp  minisim.cpp  models.def  package.json  simu.cpp  simu.hpp  types.cpp  types.hpp
addon/: binding.gyp  index.js  package-lock.json
addon/src/: emit-from-cpp.cc
cmake/: BuildType.cmake
costs/: events.yml  models.yml
data/: default_JudgesRun_costs.yml  default_Runners_costs.yml  default_config.yml  default_fullconfig.yml  default_scrambling_costs.yml  judges_runs_costs.yml  runners_costs.yml
include/: Actors.hpp  Config.hpp  Costs.hpp  CostsModel.hpp  Debug.hpp  GroupSimulator.hpp  WCAEvent.hpp  events.def  generator.hpp  libsimu.hpp  model_props.def  models.def  setup_props.def  types.def  types.hpp
input/: 222psychsheet_g1.yml  222psychsheet_g2.yml  222psychsheet_g3.yml  444psychsheet_g2.yml  444psychsheet_g3.yml  444psychsheet_g4.yml  555psychseet_g1.yml  555psychseet_g2.yml  777psychsheet_g2.yml
input/lina/: 444psychsheet_g1.yml  444psychsheet_g2.yml
libsimu/: Actors.cpp  CMakeLists.txt  Config.cpp  Costs.cpp  CostsModel.cpp  Cube.cpp  Debug.cpp  GroupSimulator.cpp  JudgesRunSimulator.cpp  Run.cpp  RunnerSystemSimulator.cpp  WCAEvent.cpp
libsimu/include/: Config.hpp  Cube.hpp  Debug.hpp  GroupSimulator.hpp  RNG.hpp  WCAEvent.hpp
libsimu/src/: CMakeLists.txt  Config.cpp  Cube.cpp  Debug.cpp  GroupSimulator.cpp  JudgesRunSimulator.cpp  RNG.cpp  Run.cpp  RunnerSystemSimulator.cpp  WCAEvent.cpp
programs/: CMakeLists.txt  config_loader.cpp  config_loader.hpp  optimizer.cpp  simu.cpp
src/: CMakeLists.txt  generator.cpp  judge_runs_system.cpp  minisim.cpp  optimizer.cpp  runner_system.cpp  simu.cpp  types.cpp
v1/costs/: events.yml  models.yml
v1/include/: costs.hpp  generator.hpp
v1/input/: 222psychsheet_g4.yml  444psychsheet_g1.yml  555psychseet_g3.yml  777psychsheet_g1.yml
v1/input/lina/: 444psychsheet_g3.yml
v1/src/: CMakeLists.txt  minisim.cpp
wasm/: CMakeLists.txt  bindings.cpp  hello.cpp
